--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,6 +1,8 @@
 Version 0.3
-    o new function transfer(), to convert from one statistical package to another
+    o new function convert(), to convert from one statistical package to another
     o new function exportDDI(), for DDI codebook version 2.5
+    o new function getMetadata(), to extract metadata information from statistical package
+      files (such as SPSS or Stata)
     o replaced package XML with package xml2 (thanks to Ruben Arslan for the suggestion)
     o changed the design of the R setup file, employing tibble as a standard metadata carrier
     o R package haven is now used to deal with missing values and missing ranges
@@ -9,7 +11,7 @@ Version 0.3
     o improved code for the SAS setup files
     o various bug fixes in function setupfile()
     
-Version 0.2-0
+Version 0.2
     o better arrangement of missing types in the R commands
     o some improvements in the R code generation
     o improved SAS setup file (thanks to Alexandre Kych)
@@ -19,7 +21,7 @@ Version 0.2-0
       in SPSS
     o fixed a bug dealing with missing values for SPSS setup files
 
-Version 0.1-0
+Version 0.1
     o R and SAS versions are now produced, in addition to SPSS and Stata
     o additional argument "saveFile" to function getMetadata()
     
