--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,7 +1,8 @@
 Version 0.8
     o fixed bug exporting invalid DDI .xml files
+    o fixed bug exporting declared missing values to Excel
     o new logical argument "declared" in function convert() allowing users to
-      control if variables in converted objects will have the class "declared"
+      control if variables in converted objects will have the class 'declared'
     
 Version 0.7
     o proper production of setup files due to changing the codeBook structure
