--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -3,6 +3,9 @@ Version 0.12
     o fixed varFormat when exporting to DDI
     o convert() now correctly returns a tibble when the input is a DDI codebook,
       and the argument "declared" is deactivated
+    o the default read and write SAS files is now .xpt (transport file) instead
+      of the previous .sas7bdat experimental format
+    o metadata is now (also) collected from factor levels, for R data frames
 
 Version 0.11
     o new argument "xmlns" in function exportDDI(), to allow creating XML files
