--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,11 +1,12 @@
 Version 0.12
     o new argument "encoding" in functions convert() and getMetadata()
+    o new argument "recode" in function setupfile()
     o fixed varFormat when exporting to DDI
     o convert() now correctly returns a tibble when the input is a DDI codebook,
       and the argument "declared" is deactivated
-    o the default read and write SAS files is now .xpt (transport file) instead
-      of the previous .sas7bdat experimental format
+    o convert to and from SAS transport files
     o metadata is now (also) collected from factor levels, for R data frames
+    o converting to SAS automatically creates a catalog file, next to the datafile
 
 Version 0.11
     o new argument "xmlns" in function exportDDI(), to allow creating XML files
