--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -7,6 +7,9 @@ Version 0.12
     o convert to and from SAS transport files
     o metadata is now (also) collected from factor levels, for R data frames
     o converting to SAS automatically creates a catalog file, next to the datafile
+    o new function recodeCharcat() to recode character categorical variables to
+      numeric categorical variables
+    o argument "chartonum" moved from function recodeValues() to function convet()
 
 Version 0.11
     o new argument "xmlns" in function exportDDI(), to allow creating XML files
