--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,8 +1,11 @@
+Version 0.13
+    o new argument "stringnum" in function setupfile()
+
 Version 0.12
     o exporting to Excel creates new sheets containing metadata information
       about the variables and their values
     o new argument "encoding" in functions convert() and getMetadata()
-    o new arguments "recode" and "stringnum" in function setupfile()
+    o new argument "recode" in function setupfile()
     o new argument "csv" in function convert()
     o fixed varFormat when exporting to DDI
     o convert() now correctly returns a tibble when the input is a DDI codebook,
