--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,6 @@
+Version 0.15
+    o exporting to SAS .xpt files uses version 5, since version 8 does not work
+
 Version 0.14
     o package documentation system converted to roxygen2
     o argument "codebook" renamed to "obj" in function setupfile()
