--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,5 +1,8 @@
 Version 0.15
-    o exporting to SAS .xpt files uses version 5, since version 8 does not work
+    o exporting to SAS .xpt files uses a default version 5, since the haven
+      default version 8 does not seem to work
+    o tagged NAs no longer automatically deactivate the argument "declared" in
+      function convert()
 
 Version 0.14
     o package documentation system converted to roxygen2
