--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -2,7 +2,7 @@ Version 0.17
     o added pre-final DDI Codebook 2.6 elements
     o major upgrade, a whole series of new functions
     o refactored function exportDDI()
-    o removed arguments "save" and "OS" from function getMetadata()
+    o removed arguments "declared", "save" and "OS" from function getMetadata()
     o make_labelled() renamed to makeLabelled() for a consistent namespace
 
 Version 0.16
