--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,5 +1,7 @@
 Version 0.20
+  o improved getCodebook() capturing extended missing values from Stata/SAS
   o bug fix in getCodebook() when a variable is completely missing (all empty NAs)
+  o function convert() now allows input files with no metadata at all
 
 Version 0.19
   o the internal DDI structure is now defined as an updateable cache
