--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -4,6 +4,10 @@ Version 0.20
   o function getCodebook() now defaults to autodetect the file encoding
   o function convert() now allows input files with no metadata at all
   o implemented way to produce a DDI Codebook using weighted summaries
+  o added xpath support with indexed segments (e.g. var[3]) in getChildren()
+  o new functions makePath(), moveChild() and replaceChild() that accept
+    xpath (path renamed)
+  o change/add/remove content and attributes accept xpath or element targets
 
 Version 0.19
   o the internal DDI structure is now defined as an updateable cache
